--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,11 +2,11 @@
 <h3>{{title}}</h3>
 <hr>
 <nav>
-  <a [routerLink] = "[/pagina-principal]"> 
+  <a [routerLink] = "['/pagina-principal']"> 
     Home
   </a>
   -
-  <a [routerLink] = "[/contacto]">
+  <a [routerLink] = "['/contacto']">
     Contacto
   </a>
 </nav>
