--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,12 +2,16 @@
 <h3>{{title}}</h3>
 <hr>
 <nav>
-  <a [routerLink] = "['/pagina-principal']"> 
+  <a [routerLink] = "['/pagina-principal']" [routerLinkActive]="['activado']"> 
     Home
   </a>
   -
-  <a [routerLink] = "['/contacto']">
+  <a [routerLink] = "['/contacto']" [routerLinkActive]="['activado']">
     Contacto
+  </a>
+  -
+  <a [routerLink] = "['/empleado']" [routerLinkActive]="['activado']">
+    Empleado
   </a>
 </nav>
 <router-outlet></router-outlet>
