--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,6 @@
 <h2>{{titulo}}</h2>
-
+<br>
+{{5|conversor:7}}
 <br>
 <input type="text" [(ngModel)]="prenda_a_guardar" ><button (click)="guardarRopa()">Añadir Prenda</button>
 <span>La prenda a guardar es: {{prenda_a_guardar}}</span>
